--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
                         <option value="512" selected>512x512</option>
                         <option value="1024">1024x1024</option>
                         <option value="2048">2048x2048</option>
+                        <option value="4096">4096x4096</option>
                     </select>
                 </div>
                 <div class="control-row">
