--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fourier Wave Generator</title>
+    <title>WaveGen</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -42,7 +43,8 @@
                 <div class="control-row">
                     <label>Wave Layers:</label>
                     <div class="slider-container">
-                        <input type="number" id="layerCount" min="1" max="8" value="4">
+                        <input type="range" id="layerCount" min="1" max="8" step="1" value="4">
+                        <span class="value-display" id="layerCountValue">4</span>
                     </div>
                 </div>
             </div>
