Add Open Graph and Twitter meta tags to index.html for improved social media sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>WaveGen</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
+
+    <!-- Open Graph / Facebook / Discord -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ammarillo.github.io/WaveGenV2/"> <!-- UPDATE THIS URL AFTER DEPLOYMENT -->
+    <meta property="og:title" content="WaveGen">
+    <meta property="og:description" content="A GPU-accelerated wave animation generator using Fourier synthesis, perfect for creating seamlessly tileable animated normal maps and height maps for games and visual effects.">
+    <meta property="og:image" content="Wave.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://ammarillo.github.io/WaveGenV2/"> <!-- UPDATE THIS URL AFTER DEPLOYMENT -->
+    <meta property="twitter:title" content="WaveGen - Fourier Wave Generator">
+    <meta property="twitter:description" content="A GPU-accelerated wave animation generator using Fourier synthesis, perfect for creating seamlessly tileable animated normal maps and height maps for games and visual effects.">
+    <meta property="twitter:image" content="Wave.png">
 </head>
 <body>
     <div class="container">
