Implement tiling preview feature in FourierWaveGenerator, adding UI controls in index.html for user interaction. Update shader logic to accommodate tiling in normal and height map calculations, ensuring consistent behavior during exports. Maintain backward compatibility for existing settings.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@
                     </div>
                 </div>
                 
+                <div class="control-row">
+                    <label>Tiling Preview:</label>
+                    <div class="slider-container">
+                        <input type="range" id="tilingPreview" min="1" max="8" step="1" value="1">
+                        <span class="value-display" id="tilingPreviewValue">1</span>
+                    </div>
+                </div>
+                
                 <div class="control-row" id="heightRangeRow" style="display: none;">
                     <label>Height Range:</label>
                     <div class="slider-container">
