--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                 <div>Resolution: <span id="resolution">512x512</span></div>
                 <div>FPS: <span id="fps">60</span></div>
                 <div>Time: <span id="time">0.00</span>s</div>
-                <div style="font-size: 11px; opacity: 0.7; margin-top: 5px;">Settings auto-saved</div>
+                <div style="font-size: 11px; opacity: 0.7; margin-top: 5px;">
+                    <a href="https://github.com/Ammarillo/WaveGenV2" target="_blank" style="color: inherit; text-decoration: none;">
+                        <i class="fab fa-github"></i> Ammarillo
+                    </a>
+                </div>
             </div>
             <div id="notification" class="notification"></div>
         </div>
